updated  style to accurate the design layout issue

--- a/src/scss/filejet-scss/components/_service-order-process.scss
+++ b/src/scss/filejet-scss/components/_service-order-process.scss
@@ -113,13 +113,13 @@ table .btn, table .boc-light #boc-ppdf-btns #boc-prev-cancel, .boc-light #boc-pp
   &::before{
     position: absolute;
     content: "";
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    right: -3px;
+    top: -10px;
+    bottom: -10px;
+    height: 80px;
+    width: 10px;
+    right: -1.3px;
     background-color: var(--bs-purple-filejet) !important;
     background-image: none !important;
-    width: 5px;
   }
 }
 
@@ -140,8 +140,7 @@ table .btn, table .boc-light #boc-ppdf-btns #boc-prev-cancel, .boc-light #boc-pp
       box-shadow:
         -0.8px 2px 0 0 var(--bs-white),
         0.8px 0 0 0 #aaa9a9,
-        0 -0.8px 0 0 #aaa9a9,
-        5px -5px 0 0 var(--bs-purple-filejet);
+        0 -0.8px 0 0 #aaa9a9;
         z-index: 1;
   }
 
@@ -157,8 +156,7 @@ table .btn, table .boc-light #boc-ppdf-btns #boc-prev-cancel, .boc-light #boc-pp
     box-shadow:
         -0.8px -0.8px 0 0 var(--bs-white),
         0.8px 0 0 0 #aaa9a9,
-        0 0.8px 0 0 #aaa9a9,
-        5px 5px 0 0 var(--bs-purple-filejet);
+        0 0.8px 0 0 #aaa9a9;
     z-index: 1;
   }
 }
