--- a/src/scss/filejet-scss/entities/_entities-details-v1.scss
+++ b/src/scss/filejet-scss/entities/_entities-details-v1.scss
@@ -552,6 +552,8 @@ $font-sora: "Sora", sans-serif;
 .entityTabsContent {
   border-top: 1px solid #D8DDDF;
   min-height: 0 !important;
+  position: relative;
+  z-index: 2;
 
   .tab-content {
     margin-inline: 1.5rem !important;
