--- a/src/scss/filejet-style.css
+++ b/src/scss/filejet-style.css
@@ -19416,13 +19416,13 @@ table .btn, table .boc-light #boc-ppdf-btns #boc-prev-cancel, .boc-light #boc-pp
 .sidebar .menu-link .nav-link.active a::before {
   position: absolute;
   content: "";
-  top: 0;
-  bottom: 0;
-  height: 100%;
-  right: -3px;
+  top: -10px;
+  bottom: -10px;
+  height: 80px;
+  width: 10px;
+  right: -1.3px;
   background-color: var(--bs-purple-filejet) !important;
   background-image: none !important;
-  width: 5px;
 }
 
 .sidebar .menu-link .nav-link {
@@ -19438,7 +19438,7 @@ table .btn, table .boc-light #boc-ppdf-btns #boc-prev-cancel, .boc-light #boc-pp
   right: 0px;
   background: var(--bs-white) !important;
   border-top-right-radius: 50%;
-  box-shadow: -0.8px 2px 0 0 var(--bs-white), 0.8px 0 0 0 #aaa9a9, 0 -0.8px 0 0 #aaa9a9, 5px -5px 0 0 var(--bs-purple-filejet);
+  box-shadow: -0.8px 2px 0 0 var(--bs-white), 0.8px 0 0 0 #aaa9a9, 0 -0.8px 0 0 #aaa9a9;
   z-index: 1;
 }
 .sidebar .menu-link .nav-link.active::after {
@@ -19450,7 +19450,7 @@ table .btn, table .boc-light #boc-ppdf-btns #boc-prev-cancel, .boc-light #boc-pp
   right: 0px;
   background: var(--bs-white) !important;
   border-bottom-right-radius: 50%;
-  box-shadow: -0.8px -0.8px 0 0 var(--bs-white), 0.8px 0 0 0 #aaa9a9, 0 0.8px 0 0 #aaa9a9, 5px 5px 0 0 var(--bs-purple-filejet);
+  box-shadow: -0.8px -0.8px 0 0 var(--bs-white), 0.8px 0 0 0 #aaa9a9, 0 0.8px 0 0 #aaa9a9;
   z-index: 1;
 }
 
@@ -22347,6 +22347,8 @@ body *::-webkit-scrollbar-thumb {
 .entityTabsContent {
   border-top: 1px solid #D8DDDF;
   min-height: 0 !important;
+  position: relative;
+  z-index: 2;
 }
 .entityTabsContent .tab-content {
   margin-inline: 1.5rem !important;
